--- a/app/vviews/ecommerce/pages/listProduct/index.ejs
+++ b/app/vviews/ecommerce/pages/listProduct/index.ejs
@@ -1,10 +1,13 @@
 <% const collection="products" ; const folderUpload=`uploads/${collection}/`;
+    const type = 'tat-ca-san-pham';
+
+
     let paramPrice = (queryPrice.maxPrice && queryPrice.minPrice) ? `minPrice=${queryPrice.minPrice}&maxPrice=${queryPrice.maxPrice}&` : ''
 
 %>
 <% include ../../helpers/showProduct %>
 <% include ../../helpers/showProductSidebar %>
-<% include ../../helpers/pagination %>
+<% include ./../../helpers/pagination %>
 
 
 
@@ -332,14 +335,15 @@
                     </div>
                 </div>
                 <hr class="clear">
-                <!-- <div class="pagination">
+                <div class="pagination">
+                    <%- paginationHelper(pagination, type, paramPrice) %>
                     <%# paginationHelper(paginationObj,'listProduct') %>
-                  <ul>
+                  <!-- <ul>
                     <li class="active"><a href="#">1</a></li>
                     <li><a href="#">2</a></li>
                     <li class="next"><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i></a></li>
-                  </ul>
-                </div> -->
+                  </ul> -->
+                </div>
             </div>
             <!--End Main Content-->
         </div>
