--- a/app/vviews/ecommerce/elements/header.ejs
+++ b/app/vviews/ecommerce/elements/header.ejs
@@ -132,19 +132,29 @@
       </div>
       <!--Mobile Logo-->
       
-      <div class="col-4 col-sm-3 col-md-3 col-lg-2">
-        <div class="site-cart">
-          <a href="/cart" class="" title="Cart">
-            <i class="icon anm anm-bag-l cart-icon"></i>
-            <span id="CartCount" class="site-header__cart-count" data-cart-render="item_count">
-   
-               
-            </span>
-          </a>
+
+        <div class="col-4 col-sm-3 col-md-3 col-lg-2">
+          <div class="site-cart">
+            <a href="/cart" class="" title="Cart">
+              <i class="icon anm anm-bag-l cart-icon"></i>
+              <span id="CartCount" class="site-header__cart-count" data-cart-render="item_count">
+
+
+              </span>
+            </a>
+          </div>
+          <div class="site-cart">
+            <a href="/wishlist" class="" title="Wishlist">
+              <i class="icon anm anm-heart-l cart-icon"></i>
+              <span id="LoveCount" class="site-header__cart-count" data-cart-render="item_count">
+
+              </span>
+            </a>
+          </div>
+          <div class="site-header__search">
+            <button type="button" class="search-trigger"><i class="icon anm anm-search-l"></i></button>
+          </div>
         </div>
-          <button type="button" class="search-trigger"><i class="icon anm anm-search-l"></i></button>
-        </div>
-      </div>
     </div>
   </div>
 </div>
