--- a/app/vviews/ecommerce/pages/category/index.ejs
+++ b/app/vviews/ecommerce/pages/category/index.ejs
@@ -174,16 +174,11 @@
                                         <!-- end product image -->
     
                                         <!-- Start product button -->
-                                        <form class="variants add" action="#" onclick="window.location.href='cart.html'"method="post">
-                                            <button class="btn btn-addto-cart" type="button">THÊM VÀO GIỎ HÀNG</button>
+                                        <form class="variants add" action="#"method="post">
+                                            <a href="javascript:void(0);" class="addtocart" ><button data-product="product-<%= items.id %>" class="btn addtocart"  type="button" tabindex="0">THÊM GIỎ HÀNG</button></a>
+                                            <a href="javascript:void(0);" class="addtolove" ><button data-product="product-<%= items.id %>" class="btn addtolove"  type="button" tabindex="0">YÊU THÍCH</button></a>
+        
                                         </form>
-                                        <div class="button-set">
-                                            <div class="wishlist-btn">
-                                                <a class="wishlist add-to-wishlist" data-product="product-<%= items.id %>" href="javascript:void(0);" title="Add to Love">
-                                                    <i class="icon anm anm-heart-l" data-product="product-<%= items.id %>"></i>
-                                                </a>
-                                            </div>
-                                        </div>
                                         <!-- end product button -->
                                     </div>
                                     <!-- end product image -->
