update change password

--- a/app/vviews/admin/helpers/formattime.ejs
+++ b/app/vviews/admin/helpers/formattime.ejs
@@ -22,7 +22,7 @@
             if(second.toString().length == 1) {
                 second = '0'+second;
             }   
-            var dateTime = hour+':'+minute+':'+second+' | '+ day+'/'+month+'/'+year;   
+            var dateTime =day+'/'+month+'/'+year;   
             return dateTime;
   }
 %>
