--- a/app/vviews/ecommerce/pages/category/index.ejs
+++ b/app/vviews/ecommerce/pages/category/index.ejs
@@ -187,7 +187,7 @@
                                     <div class="product-details text-center">
                                         <!-- product name -->
                                         <div class="product-name">
-                                            <a href="/product/<%= items.id %>"><%= items.name %> </a>
+                                            <a href="/san-pham/<%= items.id %>"><%= items.name %> </a>
                                         </div>
                                         <!-- End product name -->
                                         <!-- product price -->
