--- a/app/vviews/admin/pages/products/list.ejs
+++ b/app/vviews/admin/pages/products/list.ejs
@@ -7,7 +7,7 @@
 <% include ./../../helpers/sortField %>
 <% include ./../../helpers/image %>
 <% include ./../../helpers/selectCategory %>
-<% include ./../../helpers/showOptionBox %>
+<% include ./../../helpers/showoptionBox %>
 <% include ./../../helpers/getStringLength %>
 <% include ./../../helpers/filterCategory %>
 <% 
